[package]
name = "virtualdom"
version = "0.1.0"
authors = ["naveen <naveendavisv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib","rlib"]

[features]
debug = ["console_error_panic_hook"]


[dependencies]
html_parser = "0.5.0"
wasm-bindgen ="0.2.69"
console_error_panic_hook = { version = "0.1.6", optional= true }



[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
    'Document',
    'Element',
    'Comment',
    'HtmlElement',
    'Node',
    'Window',
]
[dev-dependencies]
wasm-bindgen-test = "0.3.15"